--- a/gradle.properties
+++ b/gradle.properties
@@ -10,16 +10,21 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version = 1.18.2
+minecraft_version=1.18.2
 
 # Forge
-forgegradle_version = 5.1.+
+forgegradle_version=5.1.+
 forge_version=40.1.0
 //forge_ats_enabled=true
 
 # Mixin
-mixingradle_version = 0.7-SNAPSHOT
-mixin_version = 0.8.5
+mixingradle_version=0.7-SNAPSHOT
+mixin_version=0.8.5
 
 # Other Dependencies
-jei_version = 9.5.3.143
+jei_version=9.5.3.143
+oculus_version=3821406
+rubidium_version=3884715
+create_version=3872145
+flywheel_version=3871082
+create_alloyed_version=3871942
