move overwritten assets to dynamic resourcepack

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,4 @@ rubidium_version=4448157
 create_version=4371809
 flywheel_version=4341471
 create_alloyed_version=4210862
+moonlight_lib_version=4491267
