--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,8 @@ dependencies {
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
     runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
 
+    implementation fg.deobf("curse.maven:selene-499980:${moonlight_lib_version}")
+
     // Pretty Shaders for Showcases
     runtimeOnly fg.deobf("curse.maven:oculus-581495:${oculus_version}")
     runtimeOnly fg.deobf("curse.maven:rubidium-574856:${rubidium_version}")
