add framework for optional mod compatibilities

--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,13 @@ dependencies {
     compileOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}"))
     runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
 
+    // for config & dynamic data/resourcepack
     implementation fg.deobf("curse.maven:selene-499980:${moonlight_lib_version}")
+
+    implementation fg.deobf("curse.maven:supplementaries-412082:${supplementaries_version}")
+    implementation fg.deobf("curse.maven:quark-243121:${quark_version}")
+    implementation fg.deobf("vazkii.autoreglib:AutoRegLib:${arl_version}")
+    implementation fg.deobf("curse.maven:oreganized-769203:${oreganized_version}")
 
     // Pretty Shaders for Showcases
     runtimeOnly fg.deobf("curse.maven:oculus-581495:${oculus_version}")
