--- a/gradle.properties
+++ b/gradle.properties
@@ -23,11 +23,11 @@ mixin_version=0.8.5
 
 # Other Dependencies
 jei_version=11.6.0.1013
-supplementaries_version=4555872
+supplementaries_version=4532784
 quark_version=4538962
 arl_version=1.8.2-56.125
 oreganized_version=4377982
-#architectury_version=8.1.80
+architectury_version=
 
 oculus_version=4299147
 rubidium_version=4448157
