--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ minecraft_version=1.19.2
 
 # Forge
 forgegradle_version=5.1.+
-forge_version=43.2.0
-//forge_ats_enabled=true
+forge_version=43.1.23
+#forge_ats_enabled=true
 
 # Mixin
 mixingradle_version=0.7-SNAPSHOT
@@ -27,6 +27,7 @@ supplementaries_version=4532784
 quark_version=4538962
 arl_version=1.8.2-56.125
 oreganized_version=4377982
+//architectury_version=8.1.80
 
 oculus_version=4299147
 rubidium_version=4448157
