--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,28 +4,28 @@ license="MIT"
 issueTrackerURL="https://github.com/xaidee/copperative/issues/" #optional
 
 [[mods]] #mandatory
-modId="copperative" #mandatory
-version="0.0.2" #mandatory
-displayName="Copperative" #mandatory
+modId="${mod_id}" #mandatory
+version="${mod_version}" #mandatory
+displayName="${mod_name}" #mandatory
 displayURL="https://www.curseforge.com/minecraft/mc-mods/copperative" #optional
 logoFile="logo.png" #optional
-authors="Team Galena" #optional
+authors="${mod_author}" #optional
 description='''
 Uniting copper and redstone components as one and expanding on copper as a whole.
 '''
-[[dependencies.copperative]] #optional
-    # the modid of the dependency
-    modId="forge" #mandatory
-    # Does this dependency have to exist - if not, ordering below must be specified
-    mandatory=true #mandatory
-    # The version range of the dependency
-    versionRange="[43,)" #mandatory
-    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
-    ordering="NONE"
-    # Side this dependency is applied on - BOTH, CLIENT or SERVER
-    side="BOTH"
+[[dependencies.${mod_id}]] #optional
+# the modid of the dependency
+modId="forge" #mandatory
+# Does this dependency have to exist - if not, ordering below must be specified
+mandatory=true #mandatory
+# The version range of the dependency
+versionRange="[43,)" #mandatory
+# An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
+ordering="NONE"
+# Side this dependency is applied on - BOTH, CLIENT or SERVER
+side="BOTH"
 
-[[dependencies.copperative]]
+[[dependencies.${mod_id}]]
     modId="minecraft"
     mandatory=true
     # This version range declares a minimum of the current minecraft version up to but not including the next major version
@@ -33,28 +33,28 @@ Uniting copper and redstone components as one and expanding on copper as a whole
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.copperative]]
+[[dependencies.${mod_id}]]
     modId="moonlight"
     mandatory=true
     versionRange="*"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.copperative]]
+[[dependencies.${mod_id}]]
     modId="supplementaries"
     mandatory=false
     versionRange="*"
     ordering="AFTER"
     side="BOTH"
 
-[[dependencies.copperative]]
+[[dependencies.${mod_id}]]
     modId="oreganized"
     mandatory=false
     versionRange="*"
     ordering="AFTER"
     side="BOTH"
 
-[[dependencies.copperative]]
+[[dependencies.${mod_id}]]
     modId="quark"
     mandatory=false
     versionRange="*"
