--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project
-version=0.2.0
+version=1.0.0
 group=galena
 mod_name=Copperative
 mod_author=Xaidee as part of Team Galena
@@ -10,11 +10,11 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
 # Minecraft
-minecraft_version=1.19.2
+minecraft_version=1.20.1
 
 # Forge
 forgegradle_version=5.1.+
-forge_version=43.2.3
+forge_version=47.0.35
 #forge_ats_enabled=true
 
 # Mixin
@@ -22,16 +22,16 @@ mixingradle_version=0.7-SNAPSHOT
 mixin_version=0.8.5
 
 # Other Dependencies
-jei_version=11.6.0.1013
-supplementaries_version=4555872
-quark_version=4538962
-arl_version=1.8.2-56.125
-oreganized_version=4377982
-architectury_version=8.1.80
+jei_version=15.2.0.22
+supplementaries_version=4651057
+#quark_version=4538962
+#arl_version=1.8.2-56.125
+oreganized_version=
+architectury_version=9.0.8
 
-oculus_version=4299147
-rubidium_version=4448157
-create_version=4550987
-flywheel_version=4341471
-create_alloyed_version=4210862
-moonlight_lib_version=4545412
+#oculus_version=4299147
+#rubidium_version=4448157
+#create_version=4550987
+#flywheel_version=4341471
+#create_alloyed_version=4210862
+moonlight_lib_version=4650809
