--- a/build.gradle
+++ b/build.gradle
@@ -108,11 +108,11 @@ dependencies {
     // for config & dynamic data/resourcepack
     implementation fg.deobf("curse.maven:selene-499980:${moonlight_lib_version}")
 
-    implementation fg.deobf("curse.maven:quark-243121:${quark_version}")
-    implementation fg.deobf("vazkii.autoreglib:AutoRegLib:${arl_version}")
+    //implementation fg.deobf("curse.maven:quark-243121:${quark_version}")
+    //implementation fg.deobf("vazkii.autoreglib:AutoRegLib:${arl_version}")
     //compileOnly fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
     implementation fg.deobf("curse.maven:supplementaries-412082:${supplementaries_version}")
-    implementation fg.deobf("curse.maven:oreganized-769203:${oreganized_version}")
+    //implementation fg.deobf("curse.maven:oreganized-769203:${oreganized_version}")
 
     // Pretty Shaders for Showcases
     //runtimeOnly fg.deobf("curse.maven:oculus-581495:${oculus_version}")
@@ -164,4 +164,18 @@ publishing {
 // other mod developers.
 tasks.withType(GenerateModuleMetadata) {
     enabled = false
+}
+
+tasks.withType(ProcessResources) {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property("version", project.version)
+
+    filesMatching(["mods.toml", "pack.mcmeta"]) {
+        expand([
+                "mod_version": project.version,
+                "mod_id"     : project.mod_id,
+                "mod_name"   : project.mod_name,
+                "mod_author" : project.mod_author,
+        ])
+    }
 }
