--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project
-version=1.0.1
+version=0.0.0-dev
 group=galena
 mod_name=Copperative
 mod_author=Xaidee as part of Team Galena
@@ -13,9 +13,8 @@ org.gradle.daemon=false
 minecraft_version=1.19.2
 
 # Forge
-forgegradle_version=5.1.+
+forgegradle_version=6.0+
 forge_version=43.2.3
-#forge_ats_enabled=true
 
 # Mixin
 mixingradle_version=0.7-SNAPSHOT
@@ -35,3 +34,12 @@ create_version=4550987
 flywheel_version=4341471
 create_alloyed_version=4210862
 moonlight_lib_version=4545412
+
+# Publishing
+release_type=release
+
+cursegradle_version=1.1.16
+minotaur_version=2.8.2
+
+modrinth_project_id=f9rb8trZ
+curseforge_project_id=867868
