--- a/gradle.properties
+++ b/gradle.properties
@@ -35,6 +35,8 @@ architectury_version=9.0.8
 #create_alloyed_version=4210862
 moonlight_lib_version=4650809
 
+sonar_version=4.3.0.3225
+
 # Publishing
 release_type=release
 
