--- a/gradle.properties
+++ b/gradle.properties
@@ -35,6 +35,8 @@ flywheel_version=4341471
 create_alloyed_version=4210862
 moonlight_lib_version=4545412
 
+sonar_version=4.3.0.3225
+
 # Publishing
 release_type=release
 
